blue bar overlaps overlay fix

--- a/src/assets/crisistextline/sass/partials/01-base/_zindices.scss
+++ b/src/assets/crisistextline/sass/partials/01-base/_zindices.scss
@@ -3,6 +3,10 @@
     z-index: 9998;  // This should be the highest z-index on platform (platform quotes colorbox is at 9999)
 }
 
+#toast-container {
+    z-index: 9997 !important;
+}
+
 .ui-autocomplete.emoji-autocomplete {
     z-index: 9002;
 }
